--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,6 @@
 h1{
     font-family: Arial, Helvetica, sans-serif;
-    color: brown;
+    color:whitesmoke;
 }
 
 body{
@@ -10,14 +10,14 @@ body{
 
 p{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: chocolate;
+    color: whitesmoke;
 }
 
-div {
+.normal {
     width: 80%;
     height: auto;
     margin: 0 auto;
-    background-color: antiquewhite;
+    background-color:cornflowerblue;
     border-radius: 5px;
     border: 1px solid black;
 }
