--- a/estilos.css
+++ b/estilos.css
@@ -17,7 +17,9 @@ p{
     width: 80%;
     height: auto;
     margin: 0 auto;
+    margin-top: 30px;
     background-color:cornflowerblue;
     border-radius: 5px;
     border: 1px solid black;
+    box-shadow: 2px 2px 2px 2px black;
 }
