--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,6 @@
 h1{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: brown;
+    font-family: Arial, Helvetica, sans-serif;
+    color:whitesmoke;
 }
 
 body{
